v 1003 gasConnection design and build